begin second develop

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+
+mvnw
+mvnw.cmd
 
 ### STS ###
 .apt_generated
